--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="right">
             <div class="mount">
-                <img src="../img/mount.png" alt="mount"></div>
+                <img src="img/mount.png" alt="mount"></div>
             <a href="#"><div class="mark num">
                 ?
             </div></a>
